--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
 		"prod": "rimraf .next && next lint && next build && next start"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"lucide-react": "0.539.0",
 		"next": "15.4.6",
-		"next-themes": "0.4.6",
+		"next-themes": "^0.4.6",
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
+		"react-hook-form": "^7.65.0",
 		"sharp": "0.34.3",
-		"tailwind-merge": "3.3.1"
+		"sonner": "^2.0.7",
+		"tailwind-merge": "3.3.1",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "3.3.1",
